--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 	    <version>2.0</version>
 	    <scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.9</version>
+	    <scope>provided</scope>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
