--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,5 +27,12 @@
   	<url-pattern>/Login.jsp</url-pattern>
   </servlet-mapping>
   
-  
+  <servlet>
+  	<servlet-name>SignUp</servlet-name>
+  	<servlet-class>com.alex.servlets.security.SignUp</servlet-class>	
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>SignUp</servlet-name>
+  	<url-pattern>/SignUp</url-pattern>
+  </servlet-mapping>
 </web-app>
