--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,22 @@
   <version>0.0.1</version>
   <packaging>war</packaging>
   <dependencies>
-<dependency>
-                     <groupId>javax</groupId>
-                     <artifactId>javaee-api</artifactId>
-                     <version>7.0</version>
-                     <scope>provided</scope>
-                  </dependency>
-<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>servlet-api</artifactId>
-	    <version>2.5</version>
-            <scope>provided</scope>
+	<dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+      <scope>provided</scope>
+     </dependency>
+     <dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>2.5</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.glassfish</groupId>
+		<artifactId>javax.json</artifactId>
+		<version>1.0.2</version>
 	</dependency>
 	<dependency>
 	    <groupId>javax.servlet</groupId>
@@ -27,21 +32,20 @@
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.9</version>
-	    
+	    <version>3.9</version>    
 	</dependency>
 <!-- jsoup HTML parser library @ https://jsoup.org/ -->
-<dependency>
-                  <groupId>org.jsoup</groupId>
-                  <artifactId>jsoup</artifactId>
-                  <version>1.12.1</version>
-                </dependency>
- <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>20.0</version>
-                </dependency>
-  </dependencies>
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.12.1</version>
+    </dependency>
+ 	<dependency>
+ 		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>20.0</version>
+		</dependency>
+	</dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -60,7 +64,6 @@
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
           <failOnMissingWebXml>false</failOnMissingWebXml>
-          
         </configuration>
       </plugin>
     </plugins>
