updated web.xml servlet url-path error

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -39,6 +39,6 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>Threads</servlet-name>
-  	<url-pattern>/Threads</url-pattern>
+  	<url-pattern>/Threads.jsp</url-pattern>
   </servlet-mapping>
 </web-app>
