--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
-      <version>7.0</version>
+      <version>8.0.1</version>
       <scope>provided</scope>
      </dependency>
      <dependency>
@@ -20,7 +20,7 @@
 	<dependency>
 		<groupId>org.glassfish</groupId>
 		<artifactId>javax.json</artifactId>
-		<version>1.0.2</version>
+		<version>1.1.4</version>
 	</dependency>
 	<dependency>
 	    <groupId>javax.servlet</groupId>
@@ -32,18 +32,18 @@
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.9</version>    
+	    <version>3.11</version>    
 	</dependency>
-<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+	<!-- jsoup HTML parser library @ https://jsoup.org/ -->
 	<dependency>
 		<groupId>org.jsoup</groupId>
 		<artifactId>jsoup</artifactId>
-		<version>1.12.1</version>
+		<version>1.13.1</version>
     </dependency>
  	<dependency>
  		<groupId>com.google.guava</groupId>
 		<artifactId>guava</artifactId>
-		<version>20.0</version>
+		<version>29.0-jre</version>
 		</dependency>
 	</dependencies>
   <build>
