--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<version>1.1.4</version>
 	</dependency>
 	<dependency>
-	    <groupId>javax.servlet</groupId>
+	    <groupId>javax.servlet.jsp</groupId>
 	    <artifactId>jsp-api</artifactId>
 	    <version>2.0</version>
 	    <scope>provided</scope>
